--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                     Estudar
                 </a>
                 <a class="give-classes" href="/give-classes.html">
-                    <img src="/images/icons/give-classes.svg" alt="Estudar">
-                    Estudar
+                    <img src="/images/icons/give-classes.svg" 
+                    alt="Dar aulas">
+                    Dar aulas
                 </a>
             </div>  
         </div> 
@@ -50,4 +51,4 @@
     <!-- video 01 / 02:21:44-->
     <!-- video 03 / 02:28:31-->
     <!-- video 04 / 00:26:07-->
-    
+    <!-- video 04 / 00:34:27-->
