--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                     Dar aulas
                 </a>
             </div>  
+
+            <p class="total">
+                total de 200 conexoes ja realizadas
+                <img src="images/icons/purple-heart.svg" alt="
+                Coração roxo">
+            </p>
         </div> 
        
 </body>
@@ -52,3 +58,4 @@
     <!-- video 03 / 02:28:31-->
     <!-- video 04 / 00:26:07-->
     <!-- video 04 / 00:34:27-->
+    <!-- video 05 / 00:42:24-->
