--- a/index.html
+++ b/index.html
@@ -59,3 +59,4 @@
     <!-- video 04 / 00:26:07-->
     <!-- video 04 / 00:34:27-->
     <!-- video 05 / 00:42:24-->
+    <!-- video 06 / 01:00:00-->
