--- a/index.html
+++ b/index.html
@@ -61,3 +61,4 @@
     <!-- video 05 / 00:42:24-->
     <!-- video 06 / 01:00:00-->
     <!-- video 07 / 01:14:25-->
+    <!-- video 08 / 01:21:37-->
