--- a/study.html
+++ b/study.html
@@ -31,20 +31,26 @@
                     <strong> Esses são os proffys disponíveis</strong>
                     <form id="search-teachers">
                         <div class="select-block">
-                            <label for="subject" id="subject">
+                            <label for="subject">Matéria</label>
+                            <select name="subject" id="subject">
                                 <option value="" disabled="" hidden="">Selecione uma opção</option>
-                                <option valeu="">Artes</option>
+                                <option valeu="1">Artes</option>
                                 <option value="2">Biologia</option>
-                                <option value="3"
-                            </label>
-                        </div>
+                                <option value="3">Ciências</option>
+                                <option value="4">Educação Física</option>
+                                <option value="5">Física</option>
+                                <option value="6">Geografia</option>   
+                                <option value="7">História</option>
+                                <option value="8">Matemática</option>
+                                <option value="9">Português</option>
+                                <option value="10">Química</option>  
+                            </select>       
+                         </div>
+                      </form>
+                  </div>
+                </header>
+             </div> 
 
-                    </form>
-
-                </div>
-           </header>
-        </div> 
-       
 </body>
 </html>
 
@@ -52,12 +58,4 @@
 
 
 
-    <!-- video 01 / 02:09:57-->
-    <!-- video 01 / 02:21:44-->
-    <!-- video 03 / 02:28:31-->
-    <!-- video 04 / 00:26:07-->
-    <!-- video 04 / 00:34:27-->
-    <!-- video 05 / 00:42:24-->
-    <!-- video 06 / 01:00:00-->
-    <!-- video 07 / 01:14:25-->
-    <!-- video 08 / 01:24:52-->
+    
