--- a/study.html
+++ b/study.html
@@ -46,6 +46,20 @@
                                 <option value="10">Química</option>  
                             </select>       
                          </div>
+                         <div class="select-block">
+                             <label for="weekday"> Dia da semana</label>
+                             <select name="weekday" id="weekday">
+                                 <option value="" disabled="" hidden="">Selecione uma opção</option>
+                                 <option value="0">Domingo</option>
+                                 <option value="1">Segunda-feira</option>
+                                 <option value="2">Terça-feira</option>
+                                 <option value="3">Quarta-feira</option>
+                                 <option value="4">Quinta-feira</option>
+                                 <option valeu="5">Sexta-feira</option>
+                                 <option valeu="6">Sábado</option>
+                                 <option value="6">Sábado</option>
+                             </select>
+                         </div>
                       </form>
                   </div>
                 </header>
