add file page-study

--- a/index.html
+++ b/index.html
@@ -64,3 +64,4 @@
     <!-- video 08 / 01:21:37-->
     <!-- video 09 / 01:25:24-->
     <!-- video 10 / 01:29:22-->
+    <!-- video 11 / 01:35:25-->
