--- a/index.html
+++ b/index.html
@@ -65,3 +65,4 @@
     <!-- video 09 / 01:25:24-->
     <!-- video 10 / 01:29:22-->
     <!-- video 11 / 01:35:25-->
+    <!-- video 12 / 01:42:10-->
