--- a/study.html
+++ b/study.html
@@ -22,12 +22,11 @@
                 <div class="top-bar-container">
                     <a href="/">
                         <img src="/images/icons/back.svg" alt="voltar">
-                     </a>
-                     <img src="/images/logo.svg" alt="Proffy">
-                 
-                </div>
+                        </a>
+                        <img src="/images/logo.svg" alt="Proffy">
+                    </div>
 
-                <div class="header-contet">
+                <div class="header-content">
                     <strong> Esses são os proffys disponíveis</strong>
                     <form id="search-teachers">
                         <div class="select-block">
@@ -65,11 +64,15 @@
                              <input name="time" id="time" type="time">
                             </div>
                             <button type="submit">Filtrar</button>
-                         </div>
+                         
                       </form>
                   </div>
                 </header>
              </div> 
+
+
+             </body>
+             </html>
 
 </body>
 </html>
