--- a/study.html
+++ b/study.html
@@ -71,7 +71,7 @@
                 </header>
 
         <main> 
-            <article>
+            <article> class="teacher-item">
                 <header>
                     <img
                         src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
@@ -95,7 +95,7 @@
             </article>
 
 
-            <article>
+            <article> class="teacher-item">
                 <header>
                     <img
                         src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
