--- a/study.html
+++ b/study.html
@@ -6,6 +6,11 @@
         initial-scale=1.0">
         <title> Proffy | Sua plataforma de estudos online </title>
 
+
+<link rel="stylesheet" href="/styles/main.css"> <--! ****__>
+
+
+
       <link rel="stylesheet" href="/styles/main.css">
       <link rel="stylesheet" href="/styles/partials/header.css">
       <link rel="stylesheet" href="/styles/partials/page-study.css">
