--- a/study.html
+++ b/study.html
@@ -7,7 +7,7 @@
         <title> Proffy | Sua plataforma de estudos online </title>
 
 
-<link rel="stylesheet" href="/styles/main.css"> <--! ****__>
+<link rel="stylesheet" href="/styles/main.css">
 
 
 
