incluse fieldset end legend

--- a/give-classes.html
+++ b/give-classes.html
@@ -38,11 +38,16 @@
             </header>
 
         <main> 
-            
+            <form action="" id="create-class">
+                <fieldset>
+                    <legend>Seus Dados</legend>
+
+                    
+
+                </fieldset>
+
+            </form>
         </main>
-
-
-
     </div> 
 
 
