incluse label end input - Nome completo

--- a/give-classes.html
+++ b/give-classes.html
@@ -42,6 +42,11 @@
                 <fieldset>
                     <legend>Seus Dados</legend>
 
+                    <div class="input-block">
+                        <label for="name">Nome Completo </label>
+                        <input name="name" id="name" required>
+                    </div>
+
                     
 
                 </fieldset>
