--- a/give-classes.html
+++ b/give-classes.html
@@ -46,7 +46,11 @@
                         <label for="name">Nome Completo </label>
                         <input name="name" id="name" required>
                     </div>
-
+                    
+                    <div class="input-block">
+                        <label for="avatar"> link da sua foto <small> (comeec com https</small></label>
+                        <input name="avatar" id="avatar" type="url" required>
+                    </div>
                     
 
                 </fieldset>
