--- a/give-classes.html
+++ b/give-classes.html
@@ -46,10 +46,16 @@
                         <label for="name">Nome Completo </label>
                         <input name="name" id="name" required>
                     </div>
-                    
+
                     <div class="input-block">
                         <label for="avatar"> link da sua foto <small> (comeec com https</small></label>
                         <input name="avatar" id="avatar" type="url" required>
+                    </div>
+
+
+                    <div class="input-block">
+                        <label for="whatsapp">whatsapp <small> (somente número)</small></label>
+                        <input name="whatsapp" id="whatsapp" type="number" required>
                     </div>
                     
 
