--- a/give-classes.html
+++ b/give-classes.html
@@ -57,6 +57,11 @@
                         <label for="whatsapp">whatsapp <small> (somente número)</small></label>
                         <input name="whatsapp" id="whatsapp" type="number" required>
                     </div>
+
+                    <div class="textarea-block">
+                        <label for="bio">Biografia</label>
+                        <textarea name="bio" id="bio" required></textarea>
+                    </div>
                     
 
                 </fieldset>
