Realizado a inclusão de clases

--- a/give-classes.html
+++ b/give-classes.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="input-block">
-                        <label for="avatar"> link da sua foto <small> (comeec com https</small></label>
+                        <label for="avatar"> link da sua foto <small> (comeec com https://)</small></label>
                         <input name="avatar" id="avatar" type="url" required>
                     </div>
 
