--- a/give-classes.html
+++ b/give-classes.html
@@ -67,6 +67,16 @@
 
                 </fieldset>
 
+                <fieldset>
+                    <legend>Sobre a aula</legend>
+                    <div class="select-block">
+                        <label for="subject"> Matéria</label>
+                        <select name="subject" id="subject" required>
+                            <option value="">Selecione uma opçao</option>
+                        </select>
+                    </div>
+                </fieldset>
+
             </form>
         </main>
     </div> 
