incluse input-block end textarea-block

--- a/give-classes.html
+++ b/give-classes.html
@@ -85,6 +85,14 @@
                             <option value="10">Química</option>
                         </select>
                     </div>
+
+
+                    <div class="input-block">
+                        <label for="cost"> Custo da sua hora/aula
+                         <small>(R$)</small>  
+                        </label>
+                        <input type="cost" id="cost" type="number" required>
+                    </div>
                 </fieldset>
 
             </form>
