--- a/give-classes.html
+++ b/give-classes.html
@@ -95,6 +95,24 @@
                     </div>
                 </fieldset>
 
+
+                <fieldset>
+                    <legend> Horário disponíveis
+                        <button id="add-time">+ Novo Horário</button>
+                    </legend>
+
+                    <div class="schedule-item">
+
+                        <div class="select-block">
+                            <label for="weekday"> Dia da semana</label>
+                            <select name="weekday[]" id="weekday"></select>
+                                               
+                        </div>
+
+                    </div>
+
+                </fieldset>
+
             </form>
         </main>
     </div> 
