--- a/give-classes.html
+++ b/give-classes.html
@@ -131,6 +131,13 @@
                     </div>
                 </fieldset>
             </form>
+            <footer>
+                <p>
+                    <img src="/images/icons/warning.svg alt="Aviso Importante">
+                    Importante! <br> Preencha todos os dados
+                </p>
+                <button type="submit">Salvar Cadastro</button>
+            </footer>
         </main>
     </div> 
         
