--- a/give-classes.html
+++ b/give-classes.html
@@ -133,10 +133,10 @@
             </form>
             <footer>
                 <p>
-                    <img src="/images/icons/warning.svg alt="Aviso Importante">
+                    <img src="/images/icons/warning.svg" alt="Aviso Importante">
                     Importante! <br> Preencha todos os dados
                 </p>
-                <button type="submit">Salvar Cadastro</button>
+                <button type="submit" form="create-class">Salvar Cadastro</button>
             </footer>
         </main>
     </div> 
