Alteracao fieldset, mas preciso duplicar quadro de horarios no give-classes

--- a/aula.html
+++ b/aula.html
@@ -4,7 +4,8 @@ Dia  12-01-21  Video  00:12:39 - 01:38:25
      18-01-21         00:26:44 - 01:38:25    
      19-01-21         00:35:57 - 01:38:25 
      20-01-21         00:43:24 - 01:38:25
-     
+                      00:55:33 nao esqueca que voce tem que      
+                         duplicar dia da semana
     
 
 
