--- a/give-classes.html
+++ b/give-classes.html
@@ -96,7 +96,7 @@
                 </fieldset>
 
 
-                <fieldset>
+                <fieldset id="schedule-item"> 
                     <legend> Horário disponíveis
                         <button id="add-time">+ Novo Horário</button>
                     </legend>
