correcao em diversos codigos, divergentes

--- a/give-classes.html
+++ b/give-classes.html
@@ -105,7 +105,7 @@
 
                         <div class="select-block">
                             <label for="weekday"> Dia da semana</label>
-                            <select name="weekday[]" required>
+                            <select name="weekday[]" id="weekday" required>
                                 <option value="">Selecione uma opção</option>
                                 <option value="0">Domingo</option>
                                 <option value="1">Segunda-feira</option>
@@ -166,6 +166,8 @@
 
 
                 </fieldset>
+
+                
             </form>
             <footer>
                 <p>
