teste clone do repositório na minha maquina

--- a/aula.html
+++ b/aula.html
@@ -7,7 +7,7 @@ Dia  12-01-21  Video  00:12:39 - 01:38:25
                       00:55:33 nao esqueca que voce tem que      
                          duplicar dia da semana
     
-
+srsrs 
 
 
     Terei de iniciar do zero.. Realizando teste no meu novo computador. 
