--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy | Sua plataforma de estudos online</title>
 
-    <style>
-        h1 {
-            color: red;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 
 
 </head>
-<body>
-   <h1>Proffy</h1>
+<body class="bodie">
+   <h1 id="page-lading">Proffy</h1>
 
-   <P>Sua plataforma de estudos online</P>
+   <P>
+        <span>Aqui: </span>   
+        Sua plataforma de estudos online</P>
    <img src=""  alt="logo">
+
+
    <button>Estudar</button>
    <button>Dar Aulas</button>
    
