Inserindo o elemento CSS chamado de :root (significa toda a raiz da minha pagina

--- a/Anotaçoes/Anotaçoes.html
+++ b/Anotaçoes/Anotaçoes.html
@@ -13,7 +13,7 @@ Introdução aos meus estudos.
 
 - HTML Significa, HyperText Markup Language - HiperTexto Marcação Linguagem. Html é uma linguagem de marcação de hiper texto.
 
-<!--- Duas tags IMPORTANTE que fica dentro do <html></html> são <head></head> e <body></body>. 
+-- Duas tags IMPORTANTE que fica dentro do <html></html> são <head></head> e <body></body>. 
     <head></head> Cabeça
     <body></body> Corpo
 
@@ -177,6 +177,13 @@ Introdução aos meus estudos.
 
                     Acho que é isso mesmo...
 
+
+
+- CSS Alterando o FUNDO DA PAGINA 
+
+                    body{
+                        background-color:
+                    }
 
 
             
