Helemento Box Model - moficaçoes como #container, padding e border

--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 
 
 </head>
-<body class="bodie">
-   <h1 id="page-lading">Proffy</h1>
-
-   <P>
-        <span>Aqui: </span>   
-        Sua plataforma de estudos online</P>
-   <img src=""  alt="logo">
-
-
-   <button>Estudar</button>
-   <button>Dar Aulas</button>
+<body id="page-landing">
    
+    <div id="container">
+        <h1>Proffy <span> iiiiiiiiiii </span></h1>
+
+   
+
+        <P>
+            <span>Aqui: </span>   
+            Sua plataforma de estudos online
+        </P>
+
+        <img src=""  alt="logo">
+
+
+        <button>Estudar</button>
+        <button>Dar Aulas</button>
+    </div>
    
 </body>
 </html>
