--- a/index.html
+++ b/index.html
@@ -10,25 +10,31 @@
     <link rel="stylesheet" href="style.css">
 
 
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+
+
+
+
+
 </head>
 <body id="page-landing">
    
     <div id="container">
-        <h1>Proffy <span> iiiiiiiiiii </span></h1>
+        <h1>Proffy</h1>
 
    
 
-        <P>
-            <span>Aqui: </span>   
-            Sua plataforma de estudos online
-        </P>
+        <P> Sua plataforma de estudos online </P>
 
-        <img src=""  alt="logo">
+        
 
 
         <button>Estudar</button>
         <button>Dar Aulas</button>
-    </div>
-   
+    </div> 
+  
+    
+
+
 </body>
 </html>
