--- a/Anotaçoes/Anotaçoes.html
+++ b/Anotaçoes/Anotaçoes.html
@@ -22,7 +22,7 @@ Introdução aos meus estudos.
     <bodY></bodY> Todo conteudo visível da página. -->
 
 
-<!--- Preste atenção na seguinte estrutura de HTML.
+- Preste atenção na seguinte estrutura de HTML.
 
     <!DOCTYPE html>
     <html lang="en">
@@ -43,9 +43,10 @@ Introdução aos meus estudos.
 
     <title></title> Essa tag altera o nome da sua pagina. 
 
-    IMPORTANTE ESSAS TAGS FICAM DENTRO DE OUTRA TAG <head></head> Referindo as configurançoes da sua página.-->
+    IMPORTANTE ESSAS TAGS FICAM DENTRO DE OUTRA TAG <head></head> Referindo as configurançoes da sua página.
 
-<!--- TAG <H1></H1> Serve para referenciar TITULOS do seu texto da sua página exemplo:
+
+- TAG <H1></H1> Serve para referenciar TITULOS do seu texto da sua página exemplo:
     <html>
         <head>
         </head>
@@ -53,11 +54,11 @@ Introdução aos meus estudos.
             <h1> COLOQUE SEU TITULO AQUI</h1> 
             <h2>COLOQUE SEU SEGUNDO TITULO AQUI</h2>
         </body>
-    </html> -->
+    </html> 
 
 
 
-<!---TAG <P></P> O elemento HTML <p> representa um parágrafo Exemplo :
+-TAG <P></P> O elemento HTML <p> representa um parágrafo Exemplo :
     <html>
         <head>
         </head>
@@ -65,11 +66,11 @@ Introdução aos meus estudos.
         <h1>titulo</h1>
         <p> PARAGRAFO DO SEU TEXTO</p>
     </body>
-    </html> -->
+    </html> 
 
 
 
-<!---TAG <img src="" alt=""> Representa a inserção de imagem no documento. Exemplo:
+-TAG <img src="" alt=""> Representa a inserção de imagem no documento. Exemplo:
     <html>
         <head>
         </head>
@@ -83,10 +84,10 @@ Introdução aos meus estudos.
         img=imagem
         src= fonte ou raiz da imagem exemplo:
         <img src="https://g1.globo.com/ 
-        alt=""> ??? -->
+        alt=""> ??? 
 
 
-<!--- TAG <button></button> O Elemento HTML <button> representa um botão clicável. Categorias de conteúdo Conteúdo de fluxo, conteúdo fraseado, Conteúdo iterativo. exemplo:
+- TAG <button></button> O Elemento HTML <button> representa um botão clicável. Categorias de conteúdo Conteúdo de fluxo, conteúdo fraseado, Conteúdo iterativo. exemplo:
     <html>
         <head>
         </head>
@@ -97,11 +98,11 @@ Introdução aos meus estudos.
             <button>ClICK PARA ENTRAR </button> botão clicável
             <button>CLICK PARA SAIR</button>    botão clicável
         </body>
-    </html>-->
+    </html>
 
 
 
-<!--- TAG <style></style> O elemento HTML <style></style> contém informaçoes de estilo para um documento é um mecanismo para adicionar estilo, cores e fontes.
+- TAG <style></style> O elemento HTML <style></style> contém informaçoes de estilo para um documento é um mecanismo para adicionar estilo, cores e fontes.
         lembrando que <style></style> é um elemento de configuração. Por isso deve ficar dentro do elemento <header></header> Exemplo:
     
         <html>
@@ -155,7 +156,7 @@ Introdução aos meus estudos.
                    <P>Sua plataforma de estudos online</P>
                    <img src=""  alt="logo">
                    <button>Estudar</button>
-                   <button>Dar Aulas</button> -->
+                   <button>Dar Aulas</button> 
 
 
 
@@ -209,3 +210,9 @@ Introdução aos meus estudos.
             Então dentro do <body></body>
             tenho um elemento, que nesse caso seria o <div></div>
             e dentro do <div></div> tenho outros váriaos elementos. 
+
+
+
+17/03/2021
+
+00:00:00
