Introdução das imagens da interface

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <body id="page-landing">
    
     <div id="container">
-        <h1>Proffy</h1>
-
+        <div class="logo"></div>
+            <img src="images/logo.svg" alt="Proffy">
+            <h2>Sua plataforma e estudos online</h2>
+    </div>
    
 
         <P> Sua plataforma de estudos online </P>
