--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
                 Dar aulas
             </a>            
         </div>
+
+
+        <p class="total-connections">
+            Total de 200 conexões já realizadas
+            <img src="/images/icons/purple-heart.svg" alt=" Coração Roxo">
+        </p>
+
+
+
     </div> 
   
     
