incluindo elementos como para formatação, cores de funto e buttons

--- a/Anotaçoes/Anotaçoes.html
+++ b/Anotaçoes/Anotaçoes.html
@@ -234,3 +234,6 @@ Introdução aos meus estudos.
 
 22/03/2021
 01:17:00
+
+-TAG <strong></strong> esse elemento também usado para texto, entretanto ela vem acompanhado com fonte grande em negrito.
+
