--- a/study.html
+++ b/study.html
@@ -32,14 +32,25 @@
             <div class="header-content">
                 <strong>Esses são os proffys disponíveis</strong>
                 <form id="search-teachers">
-                    <label for="subject" id="subject"></label>
+                    <div class="select-block">
+                    <label for="subject" id="subject">Matéria</label>
                     <select name="subject" id="subject">
-                        
+                        <option value="" disabled="" hidden="">Selecione uma opção</option>
+                        <option value="1">Artes</option>
+                        <option value="2">Biologia</option>
+                        <option value="3">Ciências</option>
+                        <option value="4">Educação Física</option>
+                        <option value="5">Física</option>
+                        <option value="6">Geografia</option>
+                        <option value="7">História</option>
+                        <option value="8">Matemática</option>
+                        <option value="9">Português</option>
+                        <option value="10">Química</option>
                     </select>
-
-                </form>
-            </div>
-        </header>
+                </div>
+            </form>
+        </div>
+    </header>
 
 
     </div> 
