--- a/study.html
+++ b/study.html
@@ -52,7 +52,10 @@
                 <div class="select-block">
                     <label for="weekday" id="weekday">
                         <option value="" disabled=""hidden="">Selecione uma opção</option>
-                        <option value="0"
+                        <option value="0">Domingo</option>
+                        <option value="1">Segunda-feira</option>
+                        <option value="2">Terça-feira</option>
+                        
                     </label>
                     
                 </div>
