Caixa de seleção de dia da semana para estudos criada

--- a/study.html
+++ b/study.html
@@ -50,12 +50,17 @@
                     </div>
 
                 <div class="select-block">
-                    <label for="weekday" id="weekday">
-                        <option value="" disabled=""hidden="">Selecione uma opção</option>
+                    <label for="weekday">Dia da semana</label> 
+                    <select name="weekday" id="weekday">
+                        <option value="" disabled="" hidden="">Selecione uma opção</option>
                         <option value="0">Domingo</option>
                         <option value="1">Segunda-feira</option>
                         <option value="2">Terça-feira</option>
-                        
+                        <option value="3">Quarta-feira</option>
+                        <option value="4">Quinta-feira</option>
+                        <option value="5">Sexta-feira</option>
+                        <option value="6">Sábado</option>
+                        </select>
                     </label>
                     
                 </div>
