Iniciei meu agrupamento de dados, com helemento  <fieldset>

--- a/give-classes.html
+++ b/give-classes.html
@@ -39,6 +39,14 @@
 
         
         <main>
+            <form action="" id="create-class">
+                <fieldset>
+                    <legend>Seus dados </legend>
+
+                </fieldset>
+
+
+            </form>
                    
         </main>
      </div> 
