Inserindo helento (required) de diferente as caixas de formulários e controles interativos para formulários. Este atributo especifica  que o usuário deve preencher o campo.

--- a/give-classes.html
+++ b/give-classes.html
@@ -43,6 +43,12 @@
                 <fieldset>
                     <legend>Seus dados </legend>
 
+                    <div class="input-block">
+                        <label for="name"> Nome Completo</label>
+                        <input name="name" id="name" required>
+                    </div>
+                    
+
                 </fieldset>
 
 
