--- a/give-classes.html
+++ b/give-classes.html
@@ -47,7 +47,23 @@
                         <label for="name"> Nome Completo</label>
                         <input name="name" id="name" required>
                     </div>
-                    
+
+                    <div class="input-block">
+                        <label for="avatar"> Link da sua foto <small>(comece com http://)</small></label>
+                        <input name="avatar" id="avatar" type="url" required>
+                    </div>
+                                      
+
+                    <div class="input-block">
+                        <label for="whatsapp">Whatsapp<small>(somente número)</small></label>
+                        <input name="whatsapp" id="whatsapp" type="number" required>
+                    </div>
+
+                    <div class="textarea-block">
+                        <label for="bio"> Biografia</label>
+                        <textarea name="bio" id="bio" required></textarea>
+                    </div>
+
 
                 </fieldset>
 
