--- a/give-classes.html
+++ b/give-classes.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/partials/header.css">
+    <link rel="stylesheet" href="/styles/partials/forms.css">
     <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
 
 
@@ -58,6 +59,7 @@
                         <label for="whatsapp">Whatsapp<small>(somente número)</small></label>
                         <input name="whatsapp" id="whatsapp" type="number" required>
                     </div>
+
 
                     <div class="textarea-block">
                         <label for="bio"> Biografia</label>
