Incluindo helemento weekday, junto ao novo button de seleção de opção, com dias e semana

--- a/give-classes.html
+++ b/give-classes.html
@@ -98,6 +98,24 @@
                 </fieldset>
 
 
+                <fieldset>
+                    <legend>Horários disponíveis
+                    <button id="add-time"> + Novo Horários</button>    
+                    </legend>
+
+                    <div class="schedule-item">
+
+                        <div class="select-block">
+                            <label for="weekday">Dia da Semana</label>
+                            <select name="weekday[]" id="weekday">
+                                
+                            </select>
+                        </div>
+
+                    </div>
+                </fieldset>
+
+
             </form>
                    
         </main>
