--- a/give-classes.html
+++ b/give-classes.html
@@ -108,7 +108,14 @@
                         <div class="select-block">
                             <label for="weekday">Dia da Semana</label>
                             <select name="weekday[]" id="weekday">
-                                
+                                <option value="">Selecione uma opção</option>
+                                <option value="0">Domingo</option>
+                                <option value="1">Segunda-feira</option>
+                                <option value="2">Terça-feira</option>
+                                <option value="3">Quarta-feira</option>
+                                <option value="4">Quinta-feira</option>
+                                <option value="5">Sexta-feira</option>
+                                <option value="6">Sábado</option>
                             </select>
                         </div>
 
