Formulário de horário junto ao formulário de semana

--- a/give-classes.html
+++ b/give-classes.html
@@ -107,7 +107,7 @@
 
                         <div class="select-block">
                             <label for="weekday">Dia da Semana</label>
-                            <select name="weekday[]" id="weekday">
+                            <select name="weekday[]" required>
                                 <option value="">Selecione uma opção</option>
                                 <option value="0">Domingo</option>
                                 <option value="1">Segunda-feira</option>
@@ -118,6 +118,18 @@
                                 <option value="6">Sábado</option>
                             </select>
                         </div>
+
+                        <div class="input-block">
+                            <label for="time_from"> Das</label>
+                            <input type="time" name="time_from[]" required>
+                        </div>
+
+                        <div class="input-block">
+                            <label for="time_from"> Das</label>
+                            <input type="time" name="time_from[]" required>
+                        </div>
+
+
 
                     </div>
                 </fieldset>
