--- a/give-classes.html
+++ b/give-classes.html
@@ -125,17 +125,21 @@
                         </div>
 
                         <div class="input-block">
-                            <label for="time_from"> Das</label>
-                            <input type="time" name="time_from[]" required>
+                            <label for="time_to"> Até</label>
+                            <input type="time" name="time_to[]" required>
                         </div>
-
-
-
                     </div>
                 </fieldset>
-
-
             </form>
+
+            <footer>
+                <p>
+                    <img src="/images/icons/warning.svg" alt="Aviso Importante">
+                    Importante! <br>
+                    Preencha todos os dados 
+                </p>
+                <button type="submit" form="create-class">Salvar cadastro</button>
+            </footer>
                    
         </main>
      </div> 
