--- a/give-classes.html
+++ b/give-classes.html
@@ -98,7 +98,7 @@
                 </fieldset>
 
 
-                <fieldset>
+                <fieldset id="schedule-items">
                     <legend>Horários disponíveis
                     <button id="add-time"> + Novo Horários</button>    
                     </legend>
