Meu primeiro contato com JS. (document.querySelector)

--- a/give-classes.html
+++ b/give-classes.html
@@ -171,6 +171,10 @@
                    
         </main>
      </div> 
+
+     <script>
+         document.querySelector('#container').style.backgroundColor = "red"
+     </script>
   
 </body>
 </html>
