Meu primeiro contato com JavaScrip, confusso, diferente e um pouco dificíl. Vou precisar de mais prática e mais atenção

--- a/give-classes.html
+++ b/give-classes.html
@@ -16,11 +16,13 @@
 
 
 
+    <script src="/scripts/addField.js" defer></script>
+
 
 
 </head>
 <body id="page-give-classes">
-   
+  
     <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
@@ -100,7 +102,7 @@
 
                 <fieldset id="schedule-items">
                     <legend>Horários disponíveis
-                    <button id="add-time"> + Novo Horários</button>    
+                    <button type="button" id="add-time"> + Novo Horários</button>    
                     </legend>
 
                     <div class="schedule-item">
@@ -172,9 +174,7 @@
         </main>
      </div> 
 
-     <script>
-         document.querySelector('#container').style.backgroundColor = "red"
-     </script>
+     
   
 </body>
 </html>
