Na pratica, acabei perdendo o controle de todo minha estrutura HTML, terei que refazer, cada traço, cada linha. Acredito que seja no meu CSS, houve mudança drastica na estilição do meu css

--- a/rocketseat/give-classes.html
+++ b/rocketseat/give-classes.html
@@ -132,8 +132,7 @@
                         </div>
                     </div>
 
-                    <div class="schedule-item">
-
+                   
                         <div class="select-block">
                             <label for="weekday">Dia da Semana</label>
                             <select name="weekday[]" required>
@@ -146,7 +145,7 @@
                                 <option value="5">Sexta-feira</option>
                                 <option value="6">Sábado</option>
                             </select>
-                        </div>
+                        </div>-->
 
                         <div class="input-block">
                             <label for="time_from"> Das</label>
@@ -157,7 +156,10 @@
                             <label for="time_to"> Até</label>
                             <input type="time" name="time_to[]" required>
                         </div>
-                    </div>
+                        
+                    </div>-->
+
+
                 </fieldset>
             </form>
 
